src/test/deca/context/invalid/class/14_creerNewClass.deca
/* Description:
    test invalide en utilisant new

    Historique:
      cree le 18/01/2020
*/

   class A {

    int get(int x){

    }


   }

   {
      A x = new int ();

   }
